# claude-usage-analyzer

./: .claudeignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: constitution.md  settings.json
.claude/commands/: bug-fix.md  feature-plan-creator.md  init-project.md
.claude/rules/: coding-style.md
.claude/skills/_template/: SKILL.md
.claude/skills/_template/references/: detail.md
.claude/skills/tdd/: SKILL.md
.claude/skills/verification/: SKILL.md
Docs/analyzer-exporter-cli/: plan.md  tasks.md
Docs/log-parser/: plan.md  tasks.md
Docs/subagent-parser/: plan.md  tasks.md
scripts/: lint-feedback.sh  persistent-solve.py  repo-map.py
src/claude_usage_analyzer/: __init__.py  cli.py  models.py  pricing.py
src/claude_usage_analyzer/analyzers/: __init__.py  usage.py
src/claude_usage_analyzer/exporters/: __init__.py  csv_exporter.py  html_exporter.py  json_exporter.py
src/claude_usage_analyzer/parsers/: __init__.py  discovery.py  history.py  session_log.py  session_meta.py  stats_cache.py  subagent.py
tests/fixtures/: history.jsonl  stats-cache.json
tests/fixtures/projects/test-project/: session-001.jsonl  session-002.jsonl
tests/fixtures/projects/test-project/session-001/subagents/: agent-abc123.jsonl  agent-abc123.meta.json  agent-def456.jsonl  agent-def456.meta.json  agent-nometafile.jsonl
tests/fixtures/sessions/: 12345.json  67890.json
tests/integration/: test_cli.py
tests/unit/: test_analyzers.py  test_exporters.py  test_models.py  test_parsers.py  test_pricing.py
