[project]
name = "claude-usage-analyzer"
version = "0.1.0"
description = "Analyze Claude Code CLI session logs — track usage patterns, token consumption, and generate reports."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-cov>=5.0"]

[project.scripts]
claude-usage = "claude_usage_analyzer.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
